[package]
name = "comms"
version = "0.1.1"
authors = ["Michael Mokrysz <hi@46b.it>"]

[dependencies]
futures = { git = "https://github.com/sirpent-team/futures-rs", branch = "master2" }
tokio-timer = { git = "https://github.com/sirpent-team/tokio-timer", branch = "traits" }
clippy = {version = "*", optional = true}

[dev-dependencies]
quickcheck = "0.2"

[features]
default = []
dev = ["clippy"]
